# video-evaluation

./: .gitignore  DATA_COMPLETION_STATUS.md  LOCAL_VERIFICATION.md  README.md  pyproject.toml
data_contracts/: README.md  original_rankings.schema.json
scripts/: run_local_pipeline.sh
sql/: postgres_export_contract.sql
src/action_semantics/: cli.py  db.py  indexed_videos.py  models.py  month1.py  quality_review.py  sample_analysis.py  text.py
src/action_semantics/extraction/: triples.py
src/action_semantics/retrieval/: batch_comparison.py  benchmark.py  comparison.py  lexical.py  provenance.py  scorers.py  search.py
tests/: test_batch_comparison.py  test_benchmark.py  test_comparison.py  test_indexed_videos.py  test_search.py
