[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stesso-action-semantics-project1"
version = "0.1.0"
description = "Structured action matching code for Project 1 instructional video retrieval."
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = {text = "Proprietary research code; do not publish real Stesso data."}
authors = [{name = "Stesso/Purdue research team"}]
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "scipy>=1.13",
  "scikit-learn>=1.5",
  "pydantic>=2.8",
  "typer>=0.12",
  "rich>=13.7",
  "spacy>=3.7",
  "nltk>=3.8.1"
]

[project.optional-dependencies]
dev = ["pytest>=8.2", "ruff>=0.5"]
legacy-database = ["SQLAlchemy>=2.0", "psycopg[binary]>=3.2"]

[project.scripts]
action-semantics = "action_semantics.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
